# kill-all-yaml

./: .gitignore  Cargo.toml
src/: main.rs
