[package]
name = "kill-all-yaml"
version = "0.1.0"
authors = ["Apoorv Kothari <apoorvko@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
serde-transcode = "1.1"
